<resources>
    <string name="MUST_LOGOUT_FLAG">20200828</string>
    <string name="UNFAV"></string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="add_contact_cancel_text">Cancel</string>
    <string name="alerts">Alerts</string>
    <string name="app_name">GIMS</string>
    <string name="app_version">null</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="battery_optimize">Optimize Notifications</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="com.crashlytics.android.build_id">5cf01c46076e42b8a0e4516edde46a9a</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm_clear_chat">Are you sure you want to clear conversation with this contact?</string>
    <string name="confirm_delete">Are you sure to delete/archive this conversation. Archive will send the chat to your email.</string>
    <string name="confirm_delete_nomail">Are you sure to delete/archive this conversation.</string>
    <string name="confirm_delete_title">Delete</string>
    <string name="copied">Chat Copied to Clipboard</string>
    <string name="create_group">Create Group</string>
    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>
    <string name="crop_image_activity_title" />
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="cusrtom_broadcast">Broadcast Message</string>
    <string name="default_web_client_id">629289947823-s8fiib02dek7igb6g62qu3qlorkbt3ah.apps.googleusercontent.com</string>
    <string name="define_zxingandroidembedded" />
    <string name="designed_and_developed_by">Designed and Developed by</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_invalid_details">Please Provide contact details</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="error_invalid_phone">Invalid Phone</string>
    <string name="exo_controls_cc_disabled_description">Enable subtitles</string>
    <string name="exo_controls_cc_enabled_description">Disable subtitles</string>
    <string name="exo_controls_custom_playback_speed">%1$.2fx</string>
    <string name="exo_controls_fastforward_by_amount_description">Fast forward %d seconds</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_fullscreen_enter_description">Enter fullscreen</string>
    <string name="exo_controls_fullscreen_exit_description">Exit fullscreen</string>
    <string name="exo_controls_hide">Hide player controls</string>
    <string name="exo_controls_next_description">Next</string>
    <string name="exo_controls_overflow_hide_description">Hide additional settings</string>
    <string name="exo_controls_overflow_show_description">Show additional settings</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_playback_speed">Speed</string>
    <string name="exo_controls_playback_speed_normal">Normal</string>
    <string name="exo_controls_previous_description">Previous</string>
    <string name="exo_controls_repeat_all_description">Repeat all</string>
    <string name="exo_controls_repeat_off_description">Repeat none</string>
    <string name="exo_controls_repeat_one_description">Repeat one</string>
    <string name="exo_controls_rewind_by_amount_description">Rewind %d seconds</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_controls_seek_bar_description">Playback progress</string>
    <string name="exo_controls_settings_description">Settings</string>
    <string name="exo_controls_show">Show player controls</string>
    <string name="exo_controls_shuffle_off_description">Shuffle off</string>
    <string name="exo_controls_shuffle_on_description">Shuffle on</string>
    <string name="exo_controls_stop_description">Stop</string>
    <string name="exo_controls_time_placeholder">00:00:00</string>
    <string name="exo_controls_vr_description">VR mode</string>
    <string name="exo_download_completed">Download completed</string>
    <string name="exo_download_description">Download</string>
    <string name="exo_download_downloading">Downloading</string>
    <string name="exo_download_failed">Download failed</string>
    <string name="exo_download_notification_channel_name">Downloads</string>
    <string name="exo_download_removing">Removing downloads</string>
    <string name="exo_item_list">%1$s, %2$s</string>
    <string name="exo_track_bitrate">%1$.2f Mbps</string>
    <string name="exo_track_mono">Mono</string>
    <string name="exo_track_resolution">%1$d × %2$d</string>
    <string name="exo_track_role_alternate">Alternate</string>
    <string name="exo_track_role_closed_captions">CC</string>
    <string name="exo_track_role_commentary">Commentary</string>
    <string name="exo_track_role_supplementary">Supplementary</string>
    <string name="exo_track_selection_auto">Auto</string>
    <string name="exo_track_selection_none">None</string>
    <string name="exo_track_selection_title_audio">Audio</string>
    <string name="exo_track_selection_title_text">Text</string>
    <string name="exo_track_selection_title_video">Video</string>
    <string name="exo_track_stereo">Stereo</string>
    <string name="exo_track_surround">Surround sound</string>
    <string name="exo_track_surround_5_point_1">5.1 surround sound</string>
    <string name="exo_track_surround_7_point_1">7.1 surround sound</string>
    <string name="exo_track_unknown">Unknown</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fav">Make Favourite</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="file_size_limit">Selected file size is not permitted. Allowed size is</string>
    <string name="firebase_database_url">https://gim-client.firebaseio.com</string>
    <string name="forwarded">Forwarded</string>
    <string name="gcm_defaultSenderId">629289947823</string>
    <string name="gcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="google_api_key">AIzaSyAgOF8DRie6lydA1vcbDW7XyVDksAJ3ncw</string>
    <string name="google_app_id">1:629289947823:android:22e8182535a8df48</string>
    <string name="google_crash_reporting_api_key">AIzaSyAgOF8DRie6lydA1vcbDW7XyVDksAJ3ncw</string>
    <string name="google_storage_bucket">gim-client.appspot.com</string>
    <string name="groupMessage">&lt;b>%1$s&lt;/b>%2$s</string>
    <string name="group_message_author">&lt;b>%1$s&lt;/b> %2$s</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="message_tag_confidential">Confidential</string>
    <string name="message_tag_important">Priority</string>
    <string name="message_tag_short_lived">Auto Delete</string>
</resources>