<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/extras_tags" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="start" android:layout_gravity="start" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
        <Button android:textSize="20.0sp" android:textColor="@color/ash" android:gravity="center" android:layout_gravity="center" android:id="@id/close_extras_tags" android:background="?selectableItemBackground" android:padding="5.0dip" android:clickable="true" android:layout_width="30.0dip" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="" android:fontFamily="@font/fontawesome" />
        <in.nic.gimkerala.tagbutton.MultiSelectToggleGroup android:gravity="center" android:layout_gravity="center" android:id="@id/message_tags" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="2.0dip" app:tbgChildSpacing="3.0dip" app:tbgChildSpacingForLastRow="align" app:tbgFlow="true" app:tbgRowSpacing="8.0dip">
            <in.nic.gimkerala.tagbutton.button.LabelToggle android:textSize="12.0sp" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center" android:id="@id/lb_confidential" android:tag="C" android:background="@drawable/bg_tag_new_confidential" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/message_tag_confidential" />
            <in.nic.gimkerala.tagbutton.button.LabelToggle android:textSize="12.0sp" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center" android:id="@id/lb_important" android:tag="I" android:background="@drawable/bg_tag_new_priority" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/message_tag_important" />
            <in.nic.gimkerala.tagbutton.button.LabelToggle android:textSize="12.0sp" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center" android:id="@id/lb_self_delete" android:tag="D" android:background="@drawable/bg_tag_new_auto_delete" android:padding="0.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/message_tag_short_lived" />
        </in.nic.gimkerala.tagbutton.MultiSelectToggleGroup>
    </LinearLayout>
</LinearLayout>